crates/kms/src/backends/snapshots/rustfs_kms__backends__tests__local_backend_capabilities.snap
---
source: crates/kms/src/backends/mod.rs
expression: capabilities_snapshot(backend.capabilities())
---
{
  "decrypt": true,
  "enable_disable": true,
  "encrypt": true,
  "generate_data_key": true,
  "physical_delete": true,
  "rotate": false,
  "schedule_deletion": true,
  "versioning": false
}
