crates/kms/src/backends/snapshots/rustfs_kms__backends__tests__static_backend_capabilities.snap
---
source: crates/kms/src/backends/mod.rs
expression: capabilities_snapshot(backend.capabilities())
---
{
  "decrypt": true,
  "enable_disable": false,
  "encrypt": true,
  "generate_data_key": true,
  "physical_delete": false,
  "rotate": false,
  "schedule_deletion": false,
  "versioning": false
}
